tools/flowc/tests/errors/error32.flow
import runtime;

Struct(fn : (() -> void) -> void);

main() {
	right1 = Struct(\m : () -> void -> {});
	right2 = Struct(\m : () -> void -> {
		r : () -> void = pprint("")(m);
		{}
	});

	wrong1 = Struct(\m -> pprint("")(m)); // flowc does not see type error here
}
